@@ -28,7 +28,7 @@ import org.sosy_lab.cpachecker.core.interfaces.ConfigurableProgramAnalysis;
  *
  * <p>IMPORTANT: A counterexample filter should try hard to not have a reference on ARGStates! Doing
  * so would retain a lot of memory, because every ARGState has (transitive) references to the full
- * ARG. Also ARGStates may be deleted later on, which changes their state and thus makes them
+ * ARG. Also, ARGStates may be deleted later on, which changes their state and thus makes them
  * useless.
  *
  * <p>Instead, prefer keeping references to objects like CFAEdges, or representations of program
@@ -61,7 +61,7 @@ public interface CounterexampleFilter {
         return new NullCounterexampleFilter();
       }
       case 1 -> {
-        return cexFilterClasses.get(0).create(config, logger, cpa);
+        return cexFilterClasses.getFirst().create(config, logger, cpa);
       }
       default -> {
         List<CounterexampleFilter> filters = new ArrayList<>(cexFilterClasses.size());
