@@ -59,6 +59,7 @@ import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CStorageClass;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypeQualifiers;
 import org.sosy_lab.cpachecker.cpa.smg2.SMGPrecisionAdjustment.PrecAdjustmentOptions;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGException;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGStateAndOptionalSMGObjectAndOffset;
@@ -142,7 +143,7 @@ public class SMGCPATransferRelationTest {
   private static final BigInteger TEST_ARRAY_LENGTH = BigInteger.valueOf(50);
   /*
    * Declaration tests:
-   *   declare variable without value and use afterwards
+   *   declare variable without value and use afterward
    *   declare with simple value and use
    *   declare stack array and use
    *   declare stack array with value
@@ -215,11 +216,11 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithoutInitializer(variableName, type, false, false));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // TODO: error check
     SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
     assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
@@ -239,7 +240,7 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
     }
   }
 
@@ -275,11 +276,11 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithInitializer(variableName, type, false, false, initList));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // TODO: error check
     SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
     assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
@@ -300,10 +301,10 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+      assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
       assertThat(
               readValueAndState
-                  .get(0)
+                  .getFirst()
                   .getValue()
                   .asNumericValue()
                   .bigIntegerValue()
@@ -343,11 +344,11 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithoutInitializer(variableName, type, false, false));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // TODO: error check
     SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
     assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
@@ -369,7 +370,7 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
     }
 
     // Read the nested struct. We can simply assume the offsets of the simple types from above + the
@@ -391,7 +392,7 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
     }
 
     // Now we repeat this for an array (they behave the same, so if one is empty, we can assume that
@@ -399,15 +400,16 @@ public class SMGCPATransferRelationTest {
     BigInteger offsetOfArrayInBits =
         MACHINE_MODEL.getFieldOffsetInBits(
             (CCompositeType) ((CElaboratedType) type).getRealType(),
-            "ARRAY_" + STRUCT_UNION_FIELD_NAMES.get(0));
-    BigInteger sizeOfArrayInBits = MACHINE_MODEL.getSizeofInBits(STRUCT_UNION_TEST_TYPES.get(0));
+            "ARRAY_" + STRUCT_UNION_FIELD_NAMES.getFirst());
+    BigInteger sizeOfArrayInBits =
+        MACHINE_MODEL.getSizeofInBits(STRUCT_UNION_TEST_TYPES.getFirst());
     for (int i = 0; i < TEST_ARRAY_LENGTH.intValue(); i++) {
       List<ValueAndSMGState> readValueAndState =
           state.readValue(memoryObject, offsetOfArrayInBits, sizeOfArrayInBits, null);
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
       // increment the size onto the offset for the next element
       offsetOfArrayInBits = offsetOfArrayInBits.add(sizeOfArrayInBits);
     }
@@ -416,7 +418,7 @@ public class SMGCPATransferRelationTest {
     BigInteger offsetOfPointerInBits =
         MACHINE_MODEL.getFieldOffsetInBits(
             (CCompositeType) ((CElaboratedType) type).getRealType(),
-            "POINTER_" + STRUCT_UNION_FIELD_NAMES.get(0));
+            "POINTER_" + STRUCT_UNION_FIELD_NAMES.getFirst());
     BigInteger sizeOfPointerInBits = BigInteger.valueOf(POINTER_SIZE_IN_BITS);
     // Check a pointer value
     List<ValueAndSMGState> readValueAndState =
@@ -424,7 +426,7 @@ public class SMGCPATransferRelationTest {
     Preconditions.checkArgument(readValueAndState.size() == 1);
     // The read state should not have any errors
     // TODO: error check
-    assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+    assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
   }
 
   /*
@@ -466,11 +468,11 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithInitializer(variableName, type, false, false, initList));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // TODO: error check
     SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
     assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
@@ -494,8 +496,8 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
-      assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+      assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
+      assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
           .isEquivalentAccordingToCompareTo(expectedValue);
       expectedValue = expectedValue.add(BigInteger.ONE);
     }
@@ -519,8 +521,8 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
-      assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+      assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
+      assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
           .isEquivalentAccordingToCompareTo(expectedValue);
       expectedValue = expectedValue.add(BigInteger.ONE);
     }
@@ -537,12 +539,12 @@ public class SMGCPATransferRelationTest {
         List<ValueAndSMGState> readValueAndState =
             state.readValue(memoryObject, offsetOfArrayInBits, sizeOfArrayInBits, null);
         Preconditions.checkArgument(readValueAndState.size() == 1);
-        // There is a overflow happening here! a char is filled with a too large value
+        // There is an overflow happening here! a char is filled with a too large value
         // TODO: error check
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
         if (readValueAndState
-                .get(0)
+                .getFirst()
                 .getValue()
                 .asNumericValue()
                 .bigIntegerValue()
@@ -551,14 +553,14 @@ public class SMGCPATransferRelationTest {
           // Overflow for char
           assertThat(
                   readValueAndState
-                      .get(0)
+                      .getFirst()
                       .getValue()
                       .asNumericValue()
                       .bigIntegerValue()
                       .add(BigInteger.valueOf(256)))
               .isEquivalentAccordingToCompareTo(expectedValue);
         } else {
-          assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+          assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
               .isEquivalentAccordingToCompareTo(expectedValue);
         }
         expectedValue = expectedValue.add(BigInteger.ONE);
@@ -580,8 +582,8 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
-      assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+      assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
+      assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
           .isEquivalentAccordingToCompareTo(BigInteger.ZERO);
     }
   }
@@ -599,12 +601,12 @@ public class SMGCPATransferRelationTest {
               null,
               declareVariableWithoutInitializer(
                   variableName, makeArrayTypeFor(type, TEST_ARRAY_LENGTH), false, false));
-      // Since we declare variables we know there will be only 1 state afterwards
+      // Since we declare variables we know there will be only 1 state afterward
       assertThat(statesAfterDecl).hasSize(1);
       // This state must have a local variable the size of the type used (on the current stack
       // frame)
       // The state should not have any errors
-      SMGState state = statesAfterDecl.get(0);
+      SMGState state = statesAfterDecl.getFirst();
       // TODO: error check
       SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
       assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
@@ -622,7 +624,7 @@ public class SMGCPATransferRelationTest {
         Preconditions.checkArgument(readValueAndState.size() == 1);
         // The read state should not have any errors
         // TODO: error check
-        assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+        assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
       }
     }
   }
@@ -654,12 +656,12 @@ public class SMGCPATransferRelationTest {
               null,
               declareVariableWithInitializer(
                   variableName, makeArrayTypeFor(type, TEST_ARRAY_LENGTH), false, false, initList));
-      // Since we declare variables we know there will be only 1 state afterwards
+      // Since we declare variables we know there will be only 1 state afterward
       assertThat(statesAfterDecl).hasSize(1);
       // This state must have a local variable the size of the type used (on the current stack
       // frame)
       // The state should not have any errors
-      SMGState state = statesAfterDecl.get(0);
+      SMGState state = statesAfterDecl.getFirst();
       // TODO: error check
       SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
       assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
@@ -676,10 +678,10 @@ public class SMGCPATransferRelationTest {
         Preconditions.checkArgument(readValueAndState.size() == 1);
         // The read state should not have any errors
         // TODO: error check
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
         assertThat(
                 readValueAndState
-                    .get(0)
+                    .getFirst()
                     .getValue()
                     .asNumericValue()
                     .bigIntegerValue()
@@ -701,11 +703,11 @@ public class SMGCPATransferRelationTest {
       List<SMGState> statesAfterDecl =
           transferRelation.handleDeclarationEdge(
               null, declareVariableWithoutInitializer(variableName, type, false, false));
-      // Since we declare variables we know there will be only 1 state afterwards
+      // Since we declare variables we know there will be only 1 state afterward
       assertThat(statesAfterDecl).hasSize(1);
       // This state must have a local variable the size of the type used (on the current stackframe)
       // The state should not have any errors
-      SMGState state = statesAfterDecl.get(0);
+      SMGState state = statesAfterDecl.getFirst();
       // TODO: error check
       SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
       assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
@@ -719,7 +721,7 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
     }
   }
 
@@ -744,12 +746,12 @@ public class SMGCPATransferRelationTest {
       List<SMGState> statesAfterDecl =
           transferRelation.handleDeclarationEdge(
               null, declareVariableWithInitializer(variableName, type, false, false, initializer));
-      // Since we declare variables we know there will be only 1 state afterwards
+      // Since we declare variables we know there will be only 1 state afterward
       assertThat(statesAfterDecl).hasSize(1);
       // This state must have a local variable the size of the type used (on the current stack
       // frame)
       // The state should not have any errors
-      SMGState state = statesAfterDecl.get(0);
+      SMGState state = statesAfterDecl.getFirst();
       // TODO: error check
       SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
       assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
@@ -757,14 +759,14 @@ public class SMGCPATransferRelationTest {
       // SMG sizes are in bits!
       BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(type);
       assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue()).isEqualTo(expectedSize);
-      // further, in the memory there must be a SMGValue that maps to the Value entered
+      // further, in the memory there must be an SMGValue that maps to the Value entered
       List<ValueAndSMGState> readValueAndState =
           state.readValue(memoryObject, BigInteger.ZERO, expectedSize, null);
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isTrue();
-      assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isTrue();
+      assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
           .isEqualTo(value);
       // We increment the value to make them distinct
       value = value.add(BigInteger.ONE);
@@ -785,17 +787,17 @@ public class SMGCPATransferRelationTest {
       BigInteger sizeInBytes = BigInteger.valueOf(i);
 
       for (CType type : TEST_TYPES) {
-        CType pointerType = new CPointerType(false, false, type);
+        CType pointerType = new CPointerType(CTypeQualifiers.NONE, type);
 
         // Make a non-global and not external variable with the current type
         List<SMGState> statesAfterDecl =
             transferRelation.handleDeclarationEdge(
                 null, declareVariableWithoutInitializer(variableName, pointerType, false, false));
 
-        // Since we declare variables we know there will be only 1 state afterwards
+        // Since we declare variables we know there will be only 1 state afterward
         assertThat(statesAfterDecl).hasSize(1);
         // We check the variable later
-        SMGState stateAfterDecl = statesAfterDecl.get(0);
+        SMGState stateAfterDecl = statesAfterDecl.getFirst();
         assertThat(stateAfterDecl.getMemoryModel().getSmg().checkSMGSanity()).isTrue();
 
         CFunctionCallAssignmentStatement mallocAndAssignmentExpr =
@@ -803,7 +805,7 @@ public class SMGCPATransferRelationTest {
                 FileLocation.DUMMY,
                 new CIdExpression(
                     FileLocation.DUMMY,
-                    new CPointerType(false, false, pointerType),
+                    new CPointerType(CTypeQualifiers.NONE, pointerType),
                     variableName,
                     declareVariableWithoutInitializer(variableName, pointerType, false, false)),
                 makeMalloc(
@@ -835,12 +837,12 @@ public class SMGCPATransferRelationTest {
           if (smgOptions.isMallocZeroReturnsZero()) {
             assertThat(
                     checkMallocFailure(
-                        statesListAfterMallocAssign.get(0), variableName, pointerType))
+                        statesListAfterMallocAssign.getFirst(), variableName, pointerType))
                 .isTrue();
           } else {
             // Non zero return
             SymbolicProgramConfiguration memoryModel =
-                statesListAfterMallocAssign.get(0).getMemoryModel();
+                statesListAfterMallocAssign.getFirst().getMemoryModel();
 
             assertThat(memoryModel.getSmg().checkSMGSanity()).isTrue();
 
@@ -848,7 +850,7 @@ public class SMGCPATransferRelationTest {
             SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
             List<ValueAndSMGState> readValueAndState =
                 statesListAfterMallocAssign
-                    .get(0)
+                    .getFirst()
                     .readValue(
                         memoryObject,
                         BigInteger.ZERO,
@@ -857,25 +859,25 @@ public class SMGCPATransferRelationTest {
             Preconditions.checkArgument(readValueAndState.size() == 1);
             assertThat(
                     statesListAfterMallocAssign
-                        .get(0)
+                        .getFirst()
                         .getMemoryModel()
-                        .isPointer(readValueAndState.get(0).getValue()))
+                        .isPointer(readValueAndState.getFirst().getValue()))
                 .isTrue();
             SMGObject mallocMemoryObject =
                 statesListAfterMallocAssign
-                    .get(0)
-                    .getPointsToTarget(readValueAndState.get(0).getValue())
+                    .getFirst()
+                    .getPointsToTarget(readValueAndState.getFirst().getValue())
                     .orElseThrow()
                     .getSMGObject();
             assertThat(
                     statesListAfterMallocAssign
-                        .get(0)
+                        .getFirst()
                         .getMemoryModel()
                         .isObjectValid(mallocMemoryObject))
                 .isFalse();
             assertThat(
                     statesListAfterMallocAssign
-                        .get(0)
+                        .getFirst()
                         .getMemoryModel()
                         .memoryIsResultOfMallocZero(mallocMemoryObject))
                 .isTrue();
@@ -884,7 +886,7 @@ public class SMGCPATransferRelationTest {
 
         } else if (!smgOptions.isEnableMallocFailure()) {
           assertThat(statesListAfterMallocAssign).hasSize(1);
-          stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+          stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
 
         } else {
           // Malloc can fail in this case, check the additional state
@@ -893,12 +895,12 @@ public class SMGCPATransferRelationTest {
           // It might however be that this is the wrong state, we check and flip them if necessary
           SMGState stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(1);
           if (!checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType)) {
-            stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(0);
+            stateAfterMallocAssignFailure = statesListAfterMallocAssign.getFirst();
             stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(1);
             assertThat(checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType))
                 .isTrue();
           } else {
-            stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+            stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
           }
         }
         // State 1 (always the malloc succeed case) has a variable with the pointer, which has a
@@ -913,7 +915,7 @@ public class SMGCPATransferRelationTest {
         BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(pointerType);
         assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue())
             .isEqualTo(expectedSize);
-        // further, in the memory there must be a SMGValue that is a pointer (points to edge)
+        // further, in the memory there must be an SMGValue that is a pointer (points to edge)
         // leading to the larger memory field with the size of malloc
         List<ValueAndSMGState> readValueAndState =
             stateAfterMallocAssignSuccess.readValue(
@@ -921,11 +923,11 @@ public class SMGCPATransferRelationTest {
         Preconditions.checkArgument(readValueAndState.size() == 1);
         // The read state should not have any errors
         // TODO: error check
-        assertThat(memoryModel.isPointer(readValueAndState.get(0).getValue())).isTrue();
+        assertThat(memoryModel.isPointer(readValueAndState.getFirst().getValue())).isTrue();
         SMGStateAndOptionalSMGObjectAndOffset mallocObjectAndOffset =
             stateAfterMallocAssignSuccess
-                .dereferencePointer(readValueAndState.get(0).getValue())
-                .get(0);
+                .dereferencePointer(readValueAndState.getFirst().getValue())
+                .getFirst();
         assertThat(mallocObjectAndOffset.hasSMGObjectAndOffset()).isTrue();
         assertThat(
                 mallocObjectAndOffset.getSMGObject().getSize().asNumericValue().bigIntegerValue())
@@ -956,7 +958,7 @@ public class SMGCPATransferRelationTest {
 
       for (CType type : TEST_TYPES) {
         for (CType sizeofType : TEST_TYPES) {
-          CType pointerType = new CPointerType(false, false, type);
+          CType pointerType = new CPointerType(CTypeQualifiers.NONE, type);
 
           CExpression binarySizeExpression =
               new CBinaryExpression(
@@ -977,7 +979,7 @@ public class SMGCPATransferRelationTest {
                               "SomeTypeNotQual",
                               "SomeTypeNotQual",
                               "SomeType",
-                              CDefaults.forType(sizeofType, FileLocation.DUMMY))),
+                              CDefaults.forType(MACHINE_MODEL, sizeofType, FileLocation.DUMMY))),
                       CUnaryExpression.UnaryOperator.SIZEOF),
                   BinaryOperator.MULTIPLY);
 
@@ -986,17 +988,17 @@ public class SMGCPATransferRelationTest {
               transferRelation.handleDeclarationEdge(
                   null, declareVariableWithoutInitializer(variableName, pointerType, false, false));
 
-          // Since we declare variables we know there will be only 1 state afterwards
+          // Since we declare variables we know there will be only 1 state afterward
           assertThat(statesAfterDecl).hasSize(1);
           // We check the variable later
-          SMGState stateAfterDecl = statesAfterDecl.get(0);
+          SMGState stateAfterDecl = statesAfterDecl.getFirst();
 
           CFunctionCallAssignmentStatement mallocAndAssignmentExpr =
               new CFunctionCallAssignmentStatement(
                   FileLocation.DUMMY,
                   new CIdExpression(
                       FileLocation.DUMMY,
-                      new CPointerType(false, false, pointerType),
+                      new CPointerType(CTypeQualifiers.NONE, pointerType),
                       variableName,
                       declareVariableWithoutInitializer(variableName, pointerType, false, false)),
                   makeMalloc(binarySizeExpression));
@@ -1033,19 +1035,19 @@ public class SMGCPATransferRelationTest {
             if (smgOptions.isMallocZeroReturnsZero()) {
               assertThat(
                       checkMallocFailure(
-                          statesListAfterMallocAssign.get(0), variableName, pointerType))
+                          statesListAfterMallocAssign.getFirst(), variableName, pointerType))
                   .isTrue();
             } else {
               // Non 0, invalid memory
               SymbolicProgramConfiguration memoryModel =
-                  statesListAfterMallocAssign.get(0).getMemoryModel();
+                  statesListAfterMallocAssign.getFirst().getMemoryModel();
               assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName))
                   .isTrue();
               SMGObject memoryObject =
                   memoryModel.getStackFrames().peek().getVariable(variableName);
               List<ValueAndSMGState> readValueAndState =
                   statesListAfterMallocAssign
-                      .get(0)
+                      .getFirst()
                       .readValue(
                           memoryObject,
                           BigInteger.ZERO,
@@ -1054,25 +1056,25 @@ public class SMGCPATransferRelationTest {
               Preconditions.checkArgument(readValueAndState.size() == 1);
               assertThat(
                       statesListAfterMallocAssign
-                          .get(0)
+                          .getFirst()
                           .getMemoryModel()
-                          .isPointer(readValueAndState.get(0).getValue()))
+                          .isPointer(readValueAndState.getFirst().getValue()))
                   .isTrue();
               SMGObject mallocMemoryObject =
                   statesListAfterMallocAssign
-                      .get(0)
-                      .getPointsToTarget(readValueAndState.get(0).getValue())
+                      .getFirst()
+                      .getPointsToTarget(readValueAndState.getFirst().getValue())
                       .orElseThrow()
                       .getSMGObject();
               assertThat(
                       statesListAfterMallocAssign
-                          .get(0)
+                          .getFirst()
                           .getMemoryModel()
                           .isObjectValid(mallocMemoryObject))
                   .isFalse();
               assertThat(
                       statesListAfterMallocAssign
-                          .get(0)
+                          .getFirst()
                           .getMemoryModel()
                           .memoryIsResultOfMallocZero(mallocMemoryObject))
                   .isTrue();
@@ -1081,7 +1083,7 @@ public class SMGCPATransferRelationTest {
 
           } else if (!smgOptions.isEnableMallocFailure()) {
             assertThat(statesListAfterMallocAssign).hasSize(1);
-            stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+            stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
 
           } else {
             // Malloc can fail in this case, check the additional state
@@ -1090,13 +1092,13 @@ public class SMGCPATransferRelationTest {
             // It might however be that this is the wrong state, we check and flip them if necessary
             SMGState stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(1);
             if (!checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType)) {
-              stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(0);
+              stateAfterMallocAssignFailure = statesListAfterMallocAssign.getFirst();
               stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(1);
               assertThat(
                       checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType))
                   .isTrue();
             } else {
-              stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+              stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
             }
           }
           // State 1 (always the malloc succeed case) has a variable with the pointer, which has a
@@ -1112,7 +1114,7 @@ public class SMGCPATransferRelationTest {
           BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(pointerType);
           assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue())
               .isEqualTo(expectedSize);
-          // further, in the memory there must be a SMGValue that is a pointer (points to edge)
+          // further, in the memory there must be an SMGValue that is a pointer (points to edge)
           // leading to the larger memory field with the size of malloc
           List<ValueAndSMGState> readValueAndState =
               stateAfterMallocAssignSuccess.readValue(
@@ -1120,11 +1122,11 @@ public class SMGCPATransferRelationTest {
           Preconditions.checkArgument(readValueAndState.size() == 1);
           // The read state should not have any errors
           // TODO: error check
-          assertThat(memoryModel.isPointer(readValueAndState.get(0).getValue())).isTrue();
+          assertThat(memoryModel.isPointer(readValueAndState.getFirst().getValue())).isTrue();
           SMGStateAndOptionalSMGObjectAndOffset mallocObjectAndOffset =
               stateAfterMallocAssignSuccess
-                  .dereferencePointer(readValueAndState.get(0).getValue())
-                  .get(0);
+                  .dereferencePointer(readValueAndState.getFirst().getValue())
+                  .getFirst();
           assertThat(mallocObjectAndOffset.hasSMGObjectAndOffset()).isTrue();
           BigInteger expectedMemorySizeInBits =
               sizeMultiplikator
@@ -1159,7 +1161,7 @@ public class SMGCPATransferRelationTest {
     // SMG sizes are in bits!
     BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(pointerType);
     assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue()).isEqualTo(expectedSize);
-    // further, in the memory there must be a SMGValue that is a pointer (points to edge)
+    // further, in the memory there must be an SMGValue that is a pointer (points to edge)
     // leading to the larger memory field with the size of malloc
     List<ValueAndSMGState> readValueAndState =
         stateAfterMallocAssignFailure.readValue(memoryObject, BigInteger.ZERO, expectedSize, null);
@@ -1167,14 +1169,15 @@ public class SMGCPATransferRelationTest {
     // The read state should not have any errors
     // TODO: error check
     // If now the read value is not numeric (!= 0) it can't be a malloc failure
-    if (!readValueAndState.get(0).getValue().isNumericValue()) {
+    if (!readValueAndState.getFirst().getValue().isNumericValue()) {
       return false;
     }
 
-    assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
-    assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+    assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
+    assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
         .isEqualTo(BigInteger.ZERO);
-    assertThat(memoryModel.getSMGValueFromValue(readValueAndState.get(0).getValue()).orElseThrow())
+    assertThat(
+            memoryModel.getSMGValueFromValue(readValueAndState.getFirst().getValue()).orElseThrow())
         .isEqualTo(SMGValue.zeroValue());
     return true;
   }
@@ -1221,7 +1224,7 @@ public class SMGCPATransferRelationTest {
         // The read state should not have any errors
         // TODO: error check
         // The value should be numeric
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
         // Check the value (chars are also numerically saved!)
         BigInteger expectedValue;
@@ -1231,7 +1234,7 @@ public class SMGCPATransferRelationTest {
         } else {
           expectedValue = BigInteger.valueOf(i);
         }
-        assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+        assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
             .isEqualTo(expectedValue);
       }
     }
@@ -1276,11 +1279,11 @@ public class SMGCPATransferRelationTest {
           stateWithArray.readValue(
               memoryObject, BigInteger.ZERO, BigInteger.valueOf(POINTER_SIZE_IN_BITS), null);
       Preconditions.checkArgument(readAddressValueAndState.size() == 1);
-      Value address = readAddressValueAndState.get(0).getValue();
+      Value address = readAddressValueAndState.getFirst().getValue();
       // TODO: address this type thing
       assertThat(address).isInstanceOf(SymbolicIdentifier.class);
       SMGStateAndOptionalSMGObjectAndOffset maybeTargetOfPointer =
-          stateWithArray.dereferencePointer(address).get(0);
+          stateWithArray.dereferencePointer(address).getFirst();
       assertThat(maybeTargetOfPointer.hasSMGObjectAndOffset()).isTrue();
       SMGStateAndOptionalSMGObjectAndOffset targetOfPointer = maybeTargetOfPointer;
       // The offset of the address should be 0
@@ -1302,7 +1305,7 @@ public class SMGCPATransferRelationTest {
         // The read state should not have any errors
         // TODO: error check
         // The value should be numeric
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
         // Check the value (chars are also numerically saved!)
         BigInteger expectedValue;
@@ -1314,7 +1317,7 @@ public class SMGCPATransferRelationTest {
         }
         assertThat(
                 readValueAndState
-                        .get(0)
+                        .getFirst()
                         .getValue()
                         .asNumericValue()
                         .bigIntegerValue()
@@ -1388,7 +1391,7 @@ public class SMGCPATransferRelationTest {
         // The read state should not have any errors
         // TODO: error check
         // The value should be numeric
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
         assertThat(currentFieldType instanceof CSimpleType).isTrue();
         // Check the value (chars are also numerically saved!)
@@ -1401,7 +1404,7 @@ public class SMGCPATransferRelationTest {
         }
         assertThat(
                 readValueAndState
-                        .get(0)
+                        .getFirst()
                         .getValue()
                         .asNumericValue()
                         .bigIntegerValue()
@@ -1459,10 +1462,10 @@ public class SMGCPATransferRelationTest {
           stateWithStruct.readValue(
               memoryObject, BigInteger.ZERO, BigInteger.valueOf(POINTER_SIZE_IN_BITS), null);
       Preconditions.checkArgument(readAddressValueAndState.size() == 1);
-      Value address = readAddressValueAndState.get(0).getValue();
+      Value address = readAddressValueAndState.getFirst().getValue();
       assertThat(address).isInstanceOf(SymbolicIdentifier.class);
       SMGStateAndOptionalSMGObjectAndOffset maybeTargetOfPointer =
-          stateWithStruct.dereferencePointer(address).get(0);
+          stateWithStruct.dereferencePointer(address).getFirst();
       assertThat(maybeTargetOfPointer.hasSMGObjectAndOffset()).isTrue();
       SMGStateAndOptionalSMGObjectAndOffset targetOfPointer = maybeTargetOfPointer;
       // The offset of the address should be 0
@@ -1490,7 +1493,7 @@ public class SMGCPATransferRelationTest {
         // The read state should not have any errors
         // TODO: error check
         // The value should be numeric
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
         assertThat(currentFieldType).isInstanceOf(CSimpleType.class);
         // Check the value (chars are also numerically saved!)
@@ -1501,7 +1504,7 @@ public class SMGCPATransferRelationTest {
         } else {
           expectedValue = BigInteger.valueOf(i);
         }
-        assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+        assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
             .isEqualTo(expectedValue);
       }
     }
@@ -1544,9 +1547,9 @@ public class SMGCPATransferRelationTest {
         // The read state should not have any errors
         // TODO: error check
         // The value should be numeric
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
-        assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+        assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
             .isEqualTo(value);
       }
     }
@@ -1684,26 +1687,26 @@ public class SMGCPATransferRelationTest {
               INT_TYPE,
               new CIdExpression(
                   FileLocation.DUMMY,
-                  new CPointerType(false, false, structType),
+                  new CPointerType(CTypeQualifiers.NONE, structType),
                   variableName1,
                   new CVariableDeclaration(
                       FileLocation.DUMMY,
                       false,
                       CStorageClass.AUTO,
-                      new CPointerType(false, false, structType),
+                      new CPointerType(CTypeQualifiers.NONE, structType),
                       variableName1,
                       variableName1,
                       variableName1,
                       null)),
               new CIdExpression(
                   FileLocation.DUMMY,
-                  new CPointerType(false, false, structType),
+                  new CPointerType(CTypeQualifiers.NONE, structType),
                   variableName2,
                   new CVariableDeclaration(
                       FileLocation.DUMMY,
                       false,
                       CStorageClass.AUTO,
-                      new CPointerType(false, false, structType),
+                      new CPointerType(CTypeQualifiers.NONE, structType),
                       variableName2,
                       variableName2,
                       variableName2,
@@ -1752,26 +1755,26 @@ public class SMGCPATransferRelationTest {
               INT_TYPE,
               new CIdExpression(
                   FileLocation.DUMMY,
-                  new CPointerType(false, false, testType),
+                  new CPointerType(CTypeQualifiers.NONE, testType),
                   variableName1,
                   new CVariableDeclaration(
                       FileLocation.DUMMY,
                       false,
                       CStorageClass.AUTO,
-                      new CPointerType(false, false, testType),
+                      new CPointerType(CTypeQualifiers.NONE, testType),
                       variableName1,
                       variableName1,
                       variableName1,
                       null)),
               new CIdExpression(
                   FileLocation.DUMMY,
-                  new CPointerType(false, false, testType),
+                  new CPointerType(CTypeQualifiers.NONE, testType),
                   variableName2,
                   new CVariableDeclaration(
                       FileLocation.DUMMY,
                       false,
                       CStorageClass.AUTO,
-                      new CPointerType(false, false, testType),
+                      new CPointerType(CTypeQualifiers.NONE, testType),
                       variableName2,
                       variableName2,
                       variableName2,
@@ -1901,12 +1904,12 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithInitializer(variableName, type, false, false, initializer));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack
     // frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // Technically the Edge is always wrong. This influences only error detection, however.
     transferRelation.setInfo(
         state,
@@ -1946,12 +1949,12 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithInitializer(variableName, arrayType, false, false, initList));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack
     // frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // Technically the Edge is always wrong. This influences only error detection, however.
     transferRelation.setInfo(
         state,
@@ -2001,7 +2004,7 @@ public class SMGCPATransferRelationTest {
 
       Collection<SMGState> statesAfterAssign =
           transferRelation.handleStatementEdge(null, assignmentExpr);
-      // Since we assign variables we know there will be only 1 state afterwards
+      // Since we assign variables we know there will be only 1 state afterward
       assertThat(statesAfterAssign).hasSize(1);
       SMGState newState = state;
       for (SMGState stateAS : statesAfterAssign) {
@@ -2029,7 +2032,7 @@ public class SMGCPATransferRelationTest {
   private SMGState declareArrayVariableWithSimpleTypeWithValuesOnTheHeap(
       int size, BigInteger[] values, String variableName, CType type) throws CPATransferException {
     Preconditions.checkArgument(values.length == size);
-    CType pointerType = new CPointerType(false, false, type);
+    CType pointerType = new CPointerType(CTypeQualifiers.NONE, type);
 
     CExpression sizeExpression =
         new CIntegerLiteralExpression(
@@ -2042,10 +2045,10 @@ public class SMGCPATransferRelationTest {
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithoutInitializer(variableName, pointerType, false, false));
 
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // We check the variable later
-    SMGState stateAfterDecl = statesAfterDecl.get(0);
+    SMGState stateAfterDecl = statesAfterDecl.getFirst();
 
     CFunctionCallAssignmentStatement mallocAndAssignmentExpr =
         new CFunctionCallAssignmentStatement(
@@ -2082,7 +2085,7 @@ public class SMGCPATransferRelationTest {
       // either its malloc(0) which is always a single null pointer, or its just 1 valid state
       // If malloc(0) happens we still use the state in the transferRelation
       assertThat(statesListAfterMallocAssign).hasSize(1);
-      stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+      stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
 
     } else {
       // Malloc can fail in this case, check the additional state
@@ -2091,12 +2094,12 @@ public class SMGCPATransferRelationTest {
       // It might however be that this is the wrong state, we check and flip them if necessary
       SMGState stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(1);
       if (!checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType)) {
-        stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(0);
+        stateAfterMallocAssignFailure = statesListAfterMallocAssign.getFirst();
         stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(1);
         assertThat(checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType))
             .isTrue();
       } else {
-        stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+        stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
       }
     }
     transferRelation.setInfo(
@@ -2131,13 +2134,13 @@ public class SMGCPATransferRelationTest {
                   type,
                   new CIdExpression(
                       FileLocation.DUMMY,
-                      new CPointerType(false, false, type),
+                      new CPointerType(CTypeQualifiers.NONE, type),
                       variableName,
                       new CVariableDeclaration(
                           FileLocation.DUMMY,
                           false,
                           CStorageClass.AUTO,
-                          new CPointerType(false, false, type),
+                          new CPointerType(CTypeQualifiers.NONE, type),
                           variableName,
                           variableName,
                           variableName,
@@ -2148,7 +2151,7 @@ public class SMGCPATransferRelationTest {
 
       Collection<SMGState> statesAfterAssign =
           transferRelation.handleStatementEdge(null, assignmentExpr);
-      // Since we assign variables we know there will be only 1 state afterwards
+      // Since we assign variables we know there will be only 1 state afterward
       assertThat(statesAfterAssign).hasSize(1);
       SMGState newState = lastState;
       for (SMGState stateAS : statesAfterAssign) {
@@ -2195,11 +2198,11 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithInitializer(variableName, structType, false, false, initList));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // Technically the Edge is always wrong. This influences only error detection, however.
     transferRelation.setInfo(
         state,
@@ -2212,14 +2215,14 @@ public class SMGCPATransferRelationTest {
   /*
    * Declare a struct with the types entered, the values entered in the order entered on the heap.
    * Then a variable with the address of this array is made with the variableName. This uses the ->
-   * operator. But the SMG2 CPA translates this always to (struct*).field so its the same.
+   * operator. But the SMG2 CPA translates this always to (struct*).field so it's the same.
    * Returns the last state acquired, but also sets the transfer relation with this state, so it can be ignored.
    *
    * This is tested in a dedicated test and therefore save to use in other tests!
    */
   private SMGState declareStructVariableWithSimpleTypeWithValuesOnTheHeap(
       BigInteger[] values, String variableName, CType type) throws CPATransferException {
-    CType pointerType = new CPointerType(false, false, type);
+    CType pointerType = new CPointerType(CTypeQualifiers.NONE, type);
 
     CExpression sizeExpression =
         new CIntegerLiteralExpression(FileLocation.DUMMY, INT_TYPE, MACHINE_MODEL.getSizeof(type));
@@ -2229,17 +2232,17 @@ public class SMGCPATransferRelationTest {
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithoutInitializer(variableName, pointerType, false, false));
 
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // We check the variable later
-    SMGState stateAfterDecl = statesAfterDecl.get(0);
+    SMGState stateAfterDecl = statesAfterDecl.getFirst();
 
     CFunctionCallAssignmentStatement mallocAndAssignmentExpr =
         new CFunctionCallAssignmentStatement(
             FileLocation.DUMMY,
             new CIdExpression(
                 FileLocation.DUMMY,
-                new CPointerType(false, false, pointerType),
+                new CPointerType(CTypeQualifiers.NONE, pointerType),
                 variableName,
                 declareVariableWithoutInitializer(variableName, pointerType, false, false)),
             makeMalloc(sizeExpression));
@@ -2270,7 +2273,7 @@ public class SMGCPATransferRelationTest {
       // either its malloc(0) which is always a single null pointer, or its just 1 valid state
       // If malloc(0) happens we still use the state in the transferRelation
       assertThat(statesListAfterMallocAssign).hasSize(1);
-      stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+      stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
 
     } else {
       // Malloc can fail in this case, check the additional state
@@ -2279,12 +2282,12 @@ public class SMGCPATransferRelationTest {
       // It might however be that this is the wrong state, we check and flip them if necessary
       SMGState stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(1);
       if (!checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType)) {
-        stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(0);
+        stateAfterMallocAssignFailure = statesListAfterMallocAssign.getFirst();
         stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(1);
         assertThat(checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType))
             .isTrue();
       } else {
-        stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+        stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
       }
     }
     transferRelation.setInfo(stateAfterMallocAssignSuccess, null, mallocAndAssignmentEdge);
@@ -2341,7 +2344,7 @@ public class SMGCPATransferRelationTest {
       Collection<SMGState> statesAfterAssign =
           transferRelation.handleStatementEdge(null, assignExpr);
 
-      // Since we assign variables we know there will be only 1 state afterwards
+      // Since we assign variables we know there will be only 1 state afterward
       assertThat(statesAfterAssign).hasSize(1);
       SMGState stateAfterAssign = stateAfterDecl;
       for (SMGState stateAS : statesAfterAssign) {
@@ -2421,13 +2424,17 @@ public class SMGCPATransferRelationTest {
     }
     CCompositeType realType =
         new CCompositeType(
-            false, false, complexTypeKind, typeBuilder.build(), structureName, structureName);
+            CTypeQualifiers.NONE,
+            complexTypeKind,
+            typeBuilder.build(),
+            structureName,
+            structureName);
     return new CElaboratedType(
-        false, false, complexTypeKind, structureName, structureName, realType);
+        CTypeQualifiers.NONE, complexTypeKind, structureName, structureName, realType);
   }
 
   private CType makeArrayTypeFor(CType elementType, CExpression length) {
-    return new CArrayType(false, false, elementType, length);
+    return new CArrayType(CTypeQualifiers.NONE, elementType, length);
   }
 
   private CType makeArrayTypeFor(CType elementType, BigInteger length) {
@@ -2436,7 +2443,7 @@ public class SMGCPATransferRelationTest {
   }
 
   private CType makePointerTypeFor(CType pointerType) {
-    return new CPointerType(false, false, pointerType);
+    return new CPointerType(CTypeQualifiers.NONE, pointerType);
   }
 
   private CInitializer makeCInitializerExpressionFor(CExpression expr) {
